# MMexplorer

./: .gitignore  README.md  app.py  build_mac.sh  build_windows.bat  debug_report.py  protein_mutation.spec  protein_mutation_mac.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-mac.yml  build.yml  release.yml
installer/: installer.iss  license.txt
sessions/: 20260416T114714Z_4XV9_V600E.json  20260416T132954Z_4XV9_V600K.json  20260416T135736Z_4XV9_V600P.json  20260421T090451Z_A0A2U7NZY9_V282L.json  20260421T092251Z_A0A2U7NZY9_V282M.json  20260421T092503Z_A0A2U7NZY9_V282P.json  20260421T093147Z_A0A2U7NZY9_V282L.json  20260421T144419Z_A0A2U7NZY9_V282L.json
templates/: index.html
venv_win/: pyvenv.cfg
